WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71986
RenderTableSection's recalcCell logic is doing too much work
https://bugs.webkit.org/show_bug.cgi?id=71986
Summary
RenderTableSection's recalcCell logic is doing too much work
Julien Chaffraix
Reported
2011-11-09 18:10:20 PST
Bug 71246
implemented a sub-optimal solution - which had the upside of removing the regression - where we keep track of the size of the table. However it means that we keep track of the Vector size outside the Vector which is evil. We should be able to just use the size directly and still keep the buffer! Patch forthcoming.
Attachments
Proposed fix: use Vector::clear() and simplify the logic.
(8.20 KB, patch)
2011-11-09 18:31 PST
,
Julien Chaffraix
darin
: review+
jchaffraix
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Chaffraix
Comment 1
2011-11-09 18:31:01 PST
Created
attachment 114418
[details]
Proposed fix: use Vector::clear() and simplify the logic.
Darin Adler
Comment 2
2011-11-10 12:13:36 PST
Comment on
attachment 114418
[details]
Proposed fix: use Vector::clear() and simplify the logic. Looks fine.
Julien Chaffraix
Comment 3
2011-11-10 17:41:40 PST
Committed
r99919
: <
http://trac.webkit.org/changeset/99919
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug